--- a/src/css/page.css
+++ b/src/css/page.css
@@ -1,8 +1,10 @@
 
 
 .page {
+    
     display: flex;
     flex-direction: row;
+    position: relative;
     border: 2px solid black;
     width: 803px;
     height: 1132px;
